Added color choices

--- a/app/assets/stylesheets/changes.css.scss
+++ b/app/assets/stylesheets/changes.css.scss
@@ -4,8 +4,8 @@
 
 body{
 	font-family: Helvetica;
-	background-color: #6785CC;
-	color: navy;   
+	background-color: #FFF8ED;
+	color: #1D2951;   
 }
 
 h1, h2, h3{
@@ -17,7 +17,7 @@ h1{
 
 .styling-options{
 	border: solid 2px #3D62B8;
-	background-color: #66B8CC; 
+	background-color: #6785CC; 
 	width: 50%; 
 	margin: 0 auto; 
 	text-align: center; 
