--- a/app/views/changes/index.html.erb
+++ b/app/views/changes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Stylify</h1>
+<h1>Stylified</h1>
 
 <h3> This website allows you to style various elements of the page using the styling options in the box below. </h3> 
 
@@ -6,7 +6,7 @@
   <h2 class="immutable">Styling Options</h2>
   <div class="title-styling immutable">
     <label> Title </label>
-    <input id="title-name" value="Stylify"></input>
+    <input id="title-name" value="Stylified"></input>
   </div>
   <div class="font-styling immutable">
 
@@ -30,6 +30,10 @@
     <div class="bg-styling immutable">
       <label> Background Color</label>
       <select id="bg">
+        <option value ="#FFBBFF"> Light Pink</option>
+        <option value="#A9C5EB"> Light Blue</option>
+        <option value="#DBBFF7"> Light Purple </option>
+        <option value="#A3FEBA"> Mint Green </option>
         <option value="white">White</option>
         <option value="black">Black</option>
         <option value="blue">Blue</option>
