Deleted public/index.html, added default color option

--- a/app/views/changes/index.html.erb
+++ b/app/views/changes/index.html.erb
@@ -30,10 +30,11 @@
     <div class="bg-styling immutable">
       <label> Background Color</label>
       <select id="bg">
-        <option value ="#FFBBFF"> Light Pink</option>
-        <option value="#A9C5EB"> Light Blue</option>
-        <option value="#DBBFF7"> Light Purple </option>
-        <option value="#A3FEBA"> Mint Green </option>
+        <option value="#1D2951">Default</option>
+        <option value ="#FFBBFF">Light Pink</option>
+        <option value="#A9C5EB">Light Blue</option>
+        <option value="#DBBFF7">Light Purple </option>
+        <option value="#A3FEBA">Mint Green </option>
         <option value="white">White</option>
         <option value="black">Black</option>
         <option value="blue">Blue</option>
